--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A template for building a REST API using Express and TypeScript",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "bun --hot src/server.ts",
     "build": "rimraf dist && esbuild src/server.ts --bundle --platform=node --outfile=dist/index.js",
@@ -24,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
+    "@types/supertest": "^6.0.2",
     "better-sse": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -47,7 +49,9 @@
     "prettier": "^3.5.1",
     "prettier-plugin-organize-imports": "^4.1.0",
     "rimraf": "^6.0.1",
+    "supertest": "^7.0.0",
     "typescript": "^5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.5"
   }
 }
