chore: fix github workflows

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -25,6 +26,7 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 8
+          run_install: false
 
       - name: Get pnpm store directory
         shell: bash
@@ -40,7 +42,8 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install
 
       - name: Run Prettier
         run: pnpm prettier --write .
