--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+# Add permissions block
+permissions:
+  contents: write
+
 jobs:
   format:
     runs-on: ubuntu-latest
@@ -53,3 +57,5 @@ jobs:
         with:
           commit_message: 'style: format code with prettier'
           branch: main
+          commit_options: '--no-verify'
+          push_options: '--force'
