feat: add logging

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "dev": "bun --hot src/server.ts",
     "build": "rimraf dist && esbuild src/server.ts --bundle --platform=node --outfile=dist/index.js",
+    "postbuild": "mkdir -p logs",
     "start": "node dist/index.js",
     "clean": "rimraf dist",
+    "clean:logs": "rimraf logs/*.log",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "format": "prettier --write .",
@@ -35,13 +37,17 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.13.3",
     "rate-limiter-flexible": "^5.0.5",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
     "@vitest/coverage-v8": "^3.0.5",
     "drizzle-kit": "^0.30.4",
