--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "A template for building a REST API using Express and TypeScript",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "bun --hot src/server.ts",
-    "build": "esbuild src/server.ts --bundle --platform=node --format=esm --outfile=dist/index.js",
+    "dev": "tsx watch src/server.ts",
+    "dev:bun": "bun --hot src/server.ts",
+    "build": "node build.config.js",
     "start": "node dist/index.js",
     "clean": "rimraf dist",
     "clean:logs": "rimraf logs",
@@ -29,6 +29,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/supertest": "^6.0.2",
     "better-sse": "^0.14.1",
@@ -40,9 +41,11 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^8.0.0",
+    "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
     "pg": "^8.13.3",
     "rate-limiter-flexible": "^5.0.5",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.24.2"
@@ -53,6 +56,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "@vitest/coverage-v8": "^3.0.5",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
@@ -63,6 +67,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
     "vite-tsconfig-paths": "^5.1.4",
