--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "dev:bun": "bun --hot src/server.ts",
-    "build": "node build.config.js",
-    "start": "node dist/index.js",
+    "build": "node build.config.mjs",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "clean": "rimraf dist",
     "clean:logs": "rimraf logs",
     "db:push": "drizzle-kit push",
@@ -58,6 +58,7 @@
     "@types/node": "^22.13.4",
     "@types/swagger-ui-express": "^4.1.7",
     "@vitest/coverage-v8": "^3.0.5",
+    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "eslint": "^9.20.1",
