feat: refine project structure

--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "express-typescript-template",
   "version": "1.0.0",
   "description": "A template for building a REST API using Express and TypeScript",
-  "main": "index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "dev:bun": "bun --hot src/server.ts",
+    "dev": "tsx watch src/index.ts",
+    "dev:bun": "bun --hot src/index.ts",
     "build": "node build.config.mjs",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "clean": "rimraf dist",
     "clean:logs": "rimraf logs",
     "db:push": "drizzle-kit push",
+    "db:push:prod": "cross-env NODE_ENV=production drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -28,10 +29,11 @@
     "express",
     "typescript",
     "drizzle",
-    "postgres"
+    "postgres",
+    "express starter"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "Jesse Ajioh",
+  "license": "MIT",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.3.0",
     "@types/cookie-parser": "^1.4.8",
