--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install PNPM
         uses: pnpm/action-setup@v2
@@ -62,7 +62,7 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: 'style: format code and fix lint issues'
+          commit_message: "style: format code and fix lint issues"
           branch: ${{ github.head_ref || github.ref_name }}
-          commit_options: '--no-verify'
-          push_options: '--force'
+          commit_options: "--no-verify"
+          push_options: "--force"
